# ai-android-app

./: .gitignore  .gitmodules  README.md  build.gradle.kts  fix_all.py  fix_rag.py  gradle.properties  gradlew.bat  local.properties.template  rewrite_aichat.py  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/knowledge/: doc1_多节点对讲系统.md  doc2_手机端本地部署.md  doc3_AI语音对话系统.md  doc4_Phi-3模型介绍.md
app/src/main/assets/models/: README.md
app/src/main/cpp/: CMakeLists.txt  llama-android-jni.cpp  whisper-android-jni.cpp
app/src/main/kotlin/com/aichat/app/: AiChatApp.kt  MainActivity.kt
app/src/main/kotlin/com/aichat/app/config/: AppConfig.kt  Constants.kt  ModelPaths.kt
app/src/main/kotlin/com/aichat/app/data/local/room/: ChatDatabase.kt  MessageDao.kt  MessageEntity.kt  SessionDao.kt  SessionEntity.kt
app/src/main/kotlin/com/aichat/app/data/repository/: ChatRepository.kt  ChatRepositoryImpl.kt  SettingsRepository.kt
app/src/main/kotlin/com/aichat/app/di/: AppModule.kt
app/src/main/kotlin/com/aichat/app/domain/: Result.kt
app/src/main/kotlin/com/aichat/app/domain/model/: ChatMessage.kt  GenerationState.kt  KnowledgeChunk.kt  LlmParams.kt  Role.kt  Session.kt
app/src/main/kotlin/com/aichat/app/engine/llm/: LlmEngine.kt  LlmEngineImpl.kt
app/src/main/kotlin/com/aichat/app/engine/model/: AssetExtractor.kt  ModelManager.kt
app/src/main/kotlin/com/aichat/app/engine/rag/: InvertedIndex.kt  RagEngine.kt  RagEngineImpl.kt
app/src/main/kotlin/com/aichat/app/engine/speech/: AudioRecorder.kt  SpeechEngine.kt  SpeechEngineImpl.kt
app/src/main/kotlin/com/aichat/app/jni/llama/: Chat.kt  Llama.kt  Model.kt  Sampler.kt  Token.kt
app/src/main/kotlin/com/aichat/app/jni/whisper/: Whisper.kt  WhisperResult.kt  WhisperSegment.kt
app/src/main/kotlin/com/aichat/app/ui/: AppNavHost.kt  ChatScreen.kt  SettingsScreen.kt
app/src/main/kotlin/com/aichat/app/ui/component/: ErrorSnackbar.kt  InputBar.kt  LoadingIndicator.kt  MessageBubble.kt  MessageList.kt  TopBar.kt
app/src/main/kotlin/com/aichat/app/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/kotlin/com/aichat/app/ui/viewmodel/: ChatViewModel.kt  SettingsViewModel.kt  UiState.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
docs/: class-diagram.mermaid  qa-report.md  sequence-diagram.mermaid  system_design.md
